# spotifyze

./: .gitignore  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
__mocks__/@tauri-apps/: plugin-dialog.ts
docs/: index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  cache.rs  lib.rs  main.rs  matcher.rs  playlist.rs  scanner.rs
src/__tests__/: App.test.tsx  ConnectStep.test.tsx  DoneStep.test.tsx  FolderStep.test.tsx  ReviewStep.test.tsx  store.test.ts
src/components/: ConnectStep.tsx  DoneStep.tsx  FolderStep.tsx  ReviewStep.tsx
src/lib/: store.ts  types.ts
