[package]
name = "folder-to-spotify-playlist"
version = "0.1.0"
edition = "2024"
description = "Create Spotify playlists from local music folders"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "folder-to-spotify-playlist"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "form", "query"] }
lofty = "0.24"
strsim = "0.11"
walkdir = "2"
directories = "6"
rand = "0.10"
sha2 = "0.11"
base64 = "0.22"
url = "2"
open = "5"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
mockito = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
